--- a/templates/index.html
+++ b/templates/index.html
@@ -21,20 +21,20 @@ div {text-align: center;}
 
 <body>
       
-<div class="" style="background-color:orange;" >
+<div class="" style="background-color:pink;" >
 <div class="clearfix">
            
 <div class="col-md-12">
-<center><p style="font-size:40px;color:white;margin-top:10px;">Poornima Institute of Engineering & Technology</p></center> 
-<center><p style="font-size:30px;color:white;margin-top:10px;">Department of Computer Engineering</p></center> 
-<center><p style="font-size:25px;color:white;margin-top:10px;">Summer Internship 2022 on Machine learning and Data Science</p></center> 
+<center><p style="font-size:40px;color:black;margin-top:10px;">Poornima Institute of Engineering & Technology</p></center> 
+<center><p style="font-size:30px;color:black;margin-top:10px;">Department of Computer Engineering</p></center> 
+<center><p style="font-size:25px;color:black;margin-top:10px;">Summer Internship 2022 on Machine learning and Data Science</p></center> 
 </div>
 </div>
 </div>
 
 <div class="login">
 <h2 >Naive Bayes Algorithm NLP Deployment</h2>
-<h4>Developed by Mohit Pawar</h4>
+<h4>Developed by Khushi Bisht</h4>
 <!-- Main Input For Receiving Query to our ML -->
 <form action="{{ url_for('predict')}}"method="get">
 <div class="form-floating mb-3">
@@ -53,11 +53,11 @@ div {text-align: center;}
 
 </div>
 
-<div class="" style="background-color:orange;" >
+<div class="" style="background-color:pink;" >
 <div class="clearfix">
            
 <div class="col-md-12">
- <center><p style="font-size:25px;color:white;margin-top:20px;">Experiment Performed in Summer internship 2022 from 27 June to 8 August </p></center> 
+ <center><p style="font-size:25px;color:black;margin-top:20px;">Experiment Performed in Summer internship 2022 from 27 June to 8 August </p></center> 
 </div>
 </div>
 </div>
